# MAI-OS-Labs

./: 1.txt  CMakeLists.txt  README.md  main.c
CP/: CMakeLists.txt  CP_OS_Nikolskiy.docx  main.cpp
CP/include/: allocators.h  buddy.h  measure_functions.h
CP/src/: Buddy.cpp  allocators.cpp  measure_functions.cpp
Lab-1/: 1.txt  CMakeLists.txt  LR_1_OS_Nikolskiy.docx  main.c
Lab-1/include/: utils.h
Lab-1/src/: child.c  parent.c  utils.c
Lab-2/: CMakeLists.txt  LR_2_OS_Nikolskiy.docx  main.cpp  monitor.sh
Lab-2/include/: tools.h
Lab-2/src/: tools.cpp
Lab-2/tests/: tests.cpp
Lab-3/: CMakeLists.txt  LR_3_OS_Nikolskiy.docx
Lab-3/include/: utils.h
Lab-3/src/: child.c  parent.c  utils.c
Lab-3/tests/: lab1_tests.cpp  lab3_tests.cpp
Lab-4/: CMakeLists.txt  LR_4_OS_Nikolskiy.docx  program_dynamic.c  program_static.c
Lab-4/lib/include/: gcd.h  pi.h
Lab-4/lib/src/: gcd.c  pi.c
Lab-4/tests/: lab4_tests.cpp
Lab-5-7/: CMakeLists.txt  LR_5-7_OS_Nikolskiy.docx  main.cpp
Lab-5-7/include/: controller.h  worker_node.h
Lab-5-7/src/: controller.cpp  utils.cpp  worker.cpp  worker_node.cpp
Lab-5-7/tests/: test_worker.cpp
Lab-8/: Lab-8.docx
include/: child.h  parent.h  utils.h
src/: child.c  parent.c  utils.c
tests/: tests.cpp
